--- a/src/styles/Page4.css
+++ b/src/styles/Page4.css
@@ -35,7 +35,7 @@
 .learn-more {
     margin-top: 30px;
     padding: 13px 15px;
-    background-color: rgb(66 160 70 / var(--tw-bg-opacity, 1));
+    background-color: green;
     border: none;
     outline: none;
     color: white;
